# mle-transition-portfolio

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
ds_project/src/ds_project/: __init__.py  cli.py  config.py  data.py  model.py
ds_project/tests/: test_cli.py  test_model.py
src/ds_project/: features.py
tests/: test_data.py
